--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -41,6 +41,15 @@
             android:textSize="15sp"
             android:id="@+id/text_view2"/>
 
+        <ImageView
+            android:id="@+id/image_delete"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="5dp"
+            android:src="@drawable/ic_delete"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"/>
+
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
